// $Id$

6.x-1.0 to 6.x-1.1
--------------------
- Fixed pgsql issue in i18nblocks query rewriting, by plj, #383772
- Changed i18ntaxonomy module weight for it to run before views, by Owen Barton, #386136
- Inprovements to i18nsync_node_available_fields(): cached, alter hook, ...
- Fixed node author field in i18nsync (author -> name), by mfb, #399216
- Fixed synchronization for nodereference fields, by dasjo, #242601
- Fixed: Unterminated entities in taxonomy module break page validation, by ao2, #478856
- Fixed multilingual variables issues, by rfay, #451120
- Fixed i18nstrings, wrong hook_schema_alter() implementation, by rsvelko, #466876
- Added location to i18nsync fields, by zedzed, #426294
- Added new dependence (i18ntaxonomy) and some taxonomy handling to i18nviews
- Fixed missing brackets around table name in query, #371429
- Fixed incompatible table locking, using proper API, #416912
- Fixed typos, by ao2, #429850, dboulet, #396402
- New feature: allow to select existing node as translation, #295682
- Fixed: translation relationship broken with i18nsync, by smh67, Beban, #367118
- Fixed: translated node forgets its menu settings, by brucepearson, #364375
- Fixed: missing node languages for LANGUAGE_SUPPORT_EXTENDED_NOT_DISPLAYED, by Roger Lopez, #365574

6.x-beta6 to 6.x-1.0
----------------------
- Added localization for content types and taxonomy in advanced search form, #363384
- Fixed multiple translation issues for node/add pages, included #353912
- Fixed Undefined function i18n_taxonomy_localize_terms(), by roborn, #362559
- Fixed: Unknown column status during i18ncontent update, #361228
- Fixed missing table wrapper in i18nblocks, by mrfelton, #362050
- Added: Display hierarchy when translating taxonomy, by Afief, #288086
- Added option for switching language when translating
- Moved admin settings to higher level tab
- Deleting profile strings when deleting fields, #356538
- Fixed: attached nodes synchronization not working, by doq, #359987