@@ -1,5 +1,17 @@
 // $Id$
 
+6.x-1.1 to .......
+------------------
+- Got started with some unit tests and base test clase.
+- Added support for image synchronization, #329825
+- Added filefield/imagefield synchronization, by dasjo, #278426
+- Fixed: Unset variables set to be multilingual don't show default values, by Island Usurper, #527534
+- Reworked content type settings, now in own fieldset
+- Added node language options:
+  - Default to current language
+  - No language neutral
+  - Lock language once created
+
 6.x-1.0 to 6.x-1.1
 --------------------
 - Fixed pgsql issue in i18nblocks query rewriting, by plj, #383772
